--- a/client/src/styles/home.scss
+++ b/client/src/styles/home.scss
@@ -42,3 +42,56 @@
     font-size: 12px;
   }
 }
+
+.home-btn {
+	display: inline-block;
+	background: transparent;
+	color: inherit;
+	font: inherit;
+	border: 0;
+	outline: 0;
+	padding: 0;
+	transition: all 200ms ease-in;
+	cursor: pointer;
+
+	&__primary {
+		background: $color-1;
+    color: $color-2;
+    @extend .uppercase-helvetica;
+		box-shadow: 0 0 10px 2px rgba(0, 0, 0, .1);
+		border-radius: 0;
+		padding: 12px 36px;
+
+		&:hover {
+			background: $color-2;
+			color: $color-1;
+		}
+	}
+
+	&__inside {
+		margin-left: -96px;
+	}
+}
+
+.home-form {
+	&__field {
+		font-family: $font-secondary !important;
+		font-size: 12px !important;
+		width: 360px;
+		background: #fff;
+		font: inherit;
+		box-shadow: 0 6px 10px 0 rgba(0, 0, 0 , .1);
+		border: 0;
+		outline: 0;
+    padding: 22px 18px;
+    @media (max-width: 441px) {
+      width: 300px;
+    }
+    @media (max-width: 381px) {
+      &::placeholder {
+        font-size: 11px;
+      }
+      width: 235px;
+    }
+	}
+}
